GNOME Bugzilla – Bug 726233
Warn if the user does not have permissions to view journal logs
Last modified: 2015-10-13 09:41:32 UTC
Depending on the systemd-journal setup, the user may need to be in a group to have permissions to read logs, as described in systemd-journald(8). It would be useful to show an in-app notification or other warning if the user does not have permissions to view certain classes of log events.
Journal log files are stored in /var/log/journal/<machine-id>. The machine-id can be found by calling sd_id128_get_machine(). The system journal is called system.journal, and user journals are called user-<uid>.journal. There are variants of the journal filenames with @<uuid> before the .journal. Checking whether the user can read the system and user journal should be sufficient.
Created attachment 302508 [details] [review] patch needs improvement In this patch, I show info bar directly in GlWindow, then the GlCategoryList won't be focused when the window is shown. So as the program starts up, the function named gl_category_list_focus won't be called and the program runs in a way we're not expecting. It needs improvement.
Created attachment 309908 [details] [review] patch which works right now
Review of attachment 309908 [details] [review]: Looks good! Let's push this only after the development freeze has been lifted.
Pushed to master as commit 61192b29feb963c74fdb38d402740fce620f1423