Warn if the user doesn't have permissions to view journal logs

https://bugzilla.gnome.org/show_bug.cgi?id=726233